[gd_scene load_steps=7 format=1]

[ext_resource path="res://menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu/option_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 60
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 2 )

[node name="menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="main" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 50.0
margin/right = 730.0
margin/bottom = 250.0
script/script = ExtResource( 1 )

[node name="lblTitle" type="Label" parent="main"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Game
Title"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="buttons" type="Control" parent="main"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 230.0
margin/right = 90.0
margin/bottom = 270.0

[node name="btnStart" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 80.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="btnOption" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 90.0
margin/right = 300.0
margin/bottom = 170.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Option"
flat = false

[node name="btnQuit" type="Button" parent="main/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 180.0
margin/right = 300.0
margin/bottom = 260.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="option" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 40.0
margin/right = 920.0
margin/bottom = 440.0
script/script = ExtResource( 3 )

[node name="btnBack" type="Button" parent="option"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 320.0
margin/right = 210.0
margin/bottom = 380.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false


